# sprintpoints

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy-pages.yml
backend/: Dockerfile
backend/app/: database.py  main.py  models.py  schemas.py  services.py  settings.py
backend/app/routers/: health.py  issues.py  participants.py  rooms.py  votes.py
backend/tests/: test_security.py
docker/caddy/: Caddyfile
docker/pgadmin/: entrypoint.sh  servers.json
src/: App.tsx  main.tsx  styles.css  supabase.ts  types.ts
src/app/: App.tsx
src/entities/room/model/: roomApi.ts  types.ts  voteStats.ts
src/features/copy-invite/model/: useCopyInviteLink.ts
src/features/create-room/model/: createRoom.ts
src/features/join-room/model/: joinRoom.ts
src/features/manage-issues/model/: estimate.ts  issues.ts  jiraCsv.ts
src/features/manage-participants/model/: participants.ts
src/features/room-session/model/: useRoomSession.ts
src/shared/api/: client.ts  supabase.ts
src/shared/config/: cards.ts
src/shared/i18n/: LanguageSelector.tsx  index.tsx
src/shared/lib/: AppError.ts  roomCode.ts  roomStorage.ts  roomUrl.ts  token.ts
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260610160000_init_planning_poker.sql  20260610190000_add_issue_details.sql  20260617133000_allow_issue_delete.sql  20260617150000_add_issue_archive.sql  20260619120000_allow_participant_delete.sql
(+9 files in other folders)
