[project]
name = "planningpoker-backend"
version = "1.0.0"
description = "FastAPI backend for Sprint Points planning poker rooms."
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
